--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -21,7 +21,7 @@
   <div class="container mx-auto xl:px-20 px-5">
     <div
       *ngIf="wishList?.length == 0"
-      class="flex flex-col bg-gray-50 items-center justify-center h-full mt-24 py-20 rounded-xl border border-gray-300"
+      class="flex flex-col bg-gray-50 items-center justify-center h-full sm:mt-24 mt-16 py-20 rounded-xl border border-gray-300"
     >
       <span class="text-5xl me-2 text-gray-500"
         ><i class="fa-solid fa-heart-circle-plus"></i
