--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,6 +1,6 @@
 <div class="cart pb-44">
   <div class="container mx-auto lg:px-20 px-5">
-    <div class="grid xl:grid-cols-4 lg:grid-cols-7 grid-cols-1 gap-x-10 mt-16">
+    <div class="grid xl:grid-cols-4 lg:grid-cols-7 grid-cols-1 gap-x-10 sm:mt-16 mt-8">
       <div class="xl:col-span-3 lg:col-span-5">
         <div class="pb-6">
           <span class="sm:text-4xl text-3xl font-bold cart-text">Cart</span>
@@ -26,13 +26,13 @@
               <span class="text-2xl me-3 text-green-500"
                 ><i class="fa-regular fa-face-laugh"></i
               ></span>
-              <p class="text-lg font-medium">
+              <p class="sm:text-lg text-sm font-medium">
                 You have {{ products ? products.length : 0 }} items in your cart
               </p>
             </div>
           </ng-template>
           <ng-template pTemplate="header">
-            <tr class="border-b border-t border-gray-300">
+            <tr class="border-b border-t border-gray-300 text-sm sm:text-base">
               <th>Name</th>
               <th>product</th>
               <th>Price</th>
@@ -42,7 +42,7 @@
             </tr>
           </ng-template>
           <ng-template pTemplate="body" let-product>
-            <tr class="border-b border-gray-300 gap-y-5">
+            <tr class="border-b border-gray-300 gap-y-5 text-sm sm:text-base">
               <td class="max-w-52">{{ product.item?.title }}</td>
               <td>
                 <img
@@ -98,7 +98,7 @@
         <div *ngIf="products.length > 0" class="flex justify-center mt-10">
           <button
             (click)="deleteCart()"
-            class="text-white w-full max-w-64 font-medium mt-3 py-2 rounded-full text-sm"
+            class="text-white w-full sm:max-w-64 max-w-40 font-medium mt-3 py-2 rounded-full sm:text-sm text-xs"
           >
             Delete Cart
           </button>
@@ -107,7 +107,7 @@
       <div
         class="xl:col-span-1 lg:col-span-2 border border-gray-300 rounded-lg max-h-64 sm:mt-12 mt-20 flex flex-col justify-between py-5 lg:py-0"
       >
-        <div>
+        <div class="text-sm sm:text-base">
           <div class="flex justify-between pt-4 pb-3 px-5 max-w-72 mx-auto">
             <span class="text-gray-500 font-medium">Subtotal</span>
             <span class="text-black font-medium">
@@ -131,7 +131,7 @@
         </div>
         <div class="flex justify-center pb-5 px-5">
           <button
-            class="text-white w-full max-w-64 font-medium mt-3 py-2 rounded-full text-sm"
+            class="text-white w-full sm:max-w-64 max-w-40 font-medium mt-3 py-2 rounded-full sm:text-sm text-xs"
           >
             Purchase
           </button>
