--- a/src/app/components/top-categories/top-categories.component.html
+++ b/src/app/components/top-categories/top-categories.component.html
@@ -1,11 +1,11 @@
-<div data-aos="fade-up" data-aos-duration="1200" class="top-categories pb-20 mt-20">
+<div data-aos="fade-up" data-aos-duration="1200" class="top-categories pb-20 sm:mt-20 mt-8">
   <section class="container mx-auto">
     <div class="container mx-auto lg:px-20 px-5">
       <div class="lg:pb-24">
-        <h2 class="text-center sm:text-5xl text-3xl font-semibold">
+        <h2 class="text-center sm:text-5xl text-2xl font-semibold">
           TOP CATEGORIES
         </h2>
-        <p class="text-center mt-4 text-sm sm:text-base">
+        <p class="text-center mt-4 text-xs sm:text-base">
           How does it feel, when you see great discount deals for each product?
         </p>
       </div>
