--- a/src/app/components/offers/offers.component.html
+++ b/src/app/components/offers/offers.component.html
@@ -7,7 +7,7 @@
       How does it feel, when you see great discount deals for each product?
     </p>
   </div>
-  <section class="pt-24 pb-10">
+  <section class="sm:pt-24 pt-10 pb-10">
     <div data-aos="zoom-in" data-aos-duration="1000" class="container mx-auto">
       <p-carousel
         [value]="limitedProducts"
