--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -19,7 +19,7 @@
           *ngIf="this.AuthService.registerErrors"
           class="alert alert-danger warn-alert"
         >
-          <p class="mb-3 text-red-600 text-xs sm:text-base">{{ this.AuthService.registerErrors }}</p>
+          <p class="mb-3 text-red-600 text-xs sm:text-base text-center">{{ this.AuthService.registerErrors }}</p>
         </div>
         <form
           class="xl:px-3 pt-4 px-sm-0 pt-sm-0 w-full max-w-md mx-auto"
