--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -17,7 +17,7 @@
           *ngIf="this.AuthService.loginErrors"
           class="alert alert-danger warn-alert"
         >
-          <p class="mb-3 text-red-600 text-xs sm:text-base">{{ this.AuthService.loginErrors }}</p>
+          <p class="mb-3 text-red-600 text-xs sm:text-base text-center">{{ this.AuthService.loginErrors }}</p>
         </div>
         <form
           class="xl:px-3 pt-4 px-sm-0 pt-sm-0 w-full max-w-md mx-auto"
