--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,6 +1,6 @@
 <div class="cart pb-44">
   <div class="container mx-auto lg:px-20 px-5">
-    <div class="grid xl:grid-cols-4 lg:grid-cols-7 grid-cols-1 gap-x-10 sm:mt-16 mt-8">
+    <div class="grid xl:grid-cols-4 lg:grid-cols-7 grid-cols-1 gap-x-10 gap-y-24 sm:mt-16 mt-8">
       <div class="xl:col-span-3 lg:col-span-5">
         <div class="pb-6">
           <span class="sm:text-4xl text-3xl font-bold cart-text">Cart</span>
@@ -105,7 +105,7 @@
         </div>
       </div>
       <div
-        class="xl:col-span-1 lg:col-span-2 border border-gray-300 rounded-lg max-h-64 sm:mt-12 mt-20 flex flex-col justify-between py-5 lg:py-0"
+        class="xl:col-span-1 lg:col-span-2 border border-gray-300 rounded-lg max-h-64 flex flex-col justify-between py-5 lg:py-0"
       >
         <div class="text-sm sm:text-base">
           <div class="flex justify-between pt-4 pb-3 px-5 max-w-72 mx-auto">
