--- a/src/app/components/add-btn/add-btn.component.scss
+++ b/src/app/components/add-btn/add-btn.component.scss
@@ -3,3 +3,6 @@ button:not(.mat-btn) {
   background-color: $secondColor;
   pointer-events: fill !important;
 }
+input {
+  pointer-events: fill !important;
+}
