--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -27,9 +27,9 @@
                 <p [@fadeIn]="animationStateSecond"
                   class="mt-5 xl:max-w-lg lg:max-w-sm max-w-sm lg:text-lg md:text-md text-center lg:text-start text-gray-600 sm:text-black"
                 >
-                  We are experts in curtain and blinds. We have spent many years
-                  working personally with our clients to create very individual
-                  stylish interiors.
+                We are experts in clothes and fashion. We have spent many years
+                working personally with our clients to create very individual
+                stylish clothes.
                 </p>
                 <button (click)="btnShop($event)" [@fadeIn]="animationStateSecond"
                   [routerLink]="['/products']"
